--- a/android/src/main/res/layout/item_home.xml
+++ b/android/src/main/res/layout/item_home.xml
@@ -3,18 +3,19 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:paddingTop="8dp"
+              android:paddingBottom="8dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="256dp"
         app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="4dp"
         app:cardElevation="2dp"
-        app:cardMaxElevation="4dp"
+        app:cardMaxElevation="2dp"
         app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="8dp">
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,8 +24,10 @@
             <ImageView
                 android:id="@+id/iv_home"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
+                android:layout_height="128dp"
+                android:adjustViewBounds="true"
                 android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"
                 tools:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
@@ -32,9 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/iv_home"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:maxLines="1"
                 android:textSize="16sp"
                 tools:text="Movie" />
         </RelativeLayout>
